# telegram-aggregator

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
core/: db.py  settings.py
migrations/: Dockerfile  env.py
migrations/versions/: 1756408713_953a71bccad3_add_messages.py  1756420081_5d27093dba10_add_message_telegram_date.py  1756420858_6c2970c7c4c5_change_message_id_and_channel_id_type_.py
src/models/: __init__.py  message.py
src/userbot/: Dockerfile  crud.py  main.py  userbot.py  utils.py
