[project]
name = "footmic-aggregator-tgbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocron>=2.1",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
migrations = [
    "alembic>=1.16.5",
    "greenlet>=3.2.4",
]
userbot = [
    "pyrogram>=2.0.106",
    "tgcrypto>=1.2.5",
]
